# ComputerGraphicsProject

./: .gitignore  CMakeLists.txt  imgui.ini
resources/: gun.mtl  tank_body.mtl  turret.mtl  wheel.mtl
resources/cubemap/: script.sh
shaders/: environment_frag.glsl  environment_vert.glsl  normal_mapping_frag.glsl  normal_mapping_vert.glsl  pbr_frag.glsl  pbr_vert.glsl  shader_frag.glsl  skybox_vert.glsl
src/: application.cpp  camera.cpp  camera.h  texture.cpp
src/bezier/: bezier.cpp  bezier.h
src/box/: box.cpp  box.h
src/cubemap/: cubemap.cpp  cubemap.h
src/skybox/: skybox.cpp  skybox.h
